feat(bot) detect bot: Nimbostratus Bot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3903,3 +3903,9 @@
     producer:
       name: Parsely, Inc.
       url: https://www.parse.ly/
+-
+  user_agent: Mozilla/5.0 (compatible; Nimbostratus-Bot/v1.3.2; http://cloudsystemnetworks.com)
+  bot:
+    name: Nimbostratus Bot
+    category: Site Monitor
+    url: http://cloudsystemnetworks.com
