feat(bot) detect bot: Heart Rails Capture

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3909,3 +3909,9 @@
     name: Nimbostratus Bot
     category: Site Monitor
     url: http://cloudsystemnetworks.com
+-
+  user_agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.2.17) Gecko/20110515 HeartRails_Capture/1.0.4 (+http://capture.heartrails.com/) Namoroka/3.6.17
+  bot:
+    name: Heart Rails Capture
+    category: Service Agent
+    url: http://capture.heartrails.com
