feat(feed reader) detect rss reader NetNewsWire and improved detection MacOs issue #6315

--- a/regexes/client/feed_readers.yml
+++ b/regexes/client/feed_readers.yml
@@ -71,7 +71,7 @@
   url: 'http://liferea.sf.net/'
   type: 'Feed Reader'
 
-- regex: 'NetNewsWire(?:[/ ](\d+[\.\d]+))?'
+- regex: '(?:NetNewsWire|Evergreen.+MacOS)(?:[/ ](\d+[\.\d]+))?'
   name: 'NetNewsWire'
   version: '$1'
   url: 'http://netnewswireapp.com/'
