feat(bot) detect bot: Notify Ninja
issue #6315

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2169,6 +2169,11 @@
   category: 'Site Monitor'
   url: 'https://ping-admin.ru/'
 
+- regex: 'notifyninja.+monitoring'
+  name: 'Notify Ninja'
+  category: 'Site Monitor'
+  url: 'http://notifyninja.com'
+
 - regex: 'WebDataStats'
   name: 'WebDataStats'
   category: 'Crawler'
