--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3915,3 +3915,9 @@
     name: Heart Rails Capture
     category: Service Agent
     url: http://capture.heartrails.com
+-
+  user_agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/43.0.2357.134 Safari/537.36 http://notifyninja.com/monitoring
+  bot:
+    name: Notify Ninja
+    category: Site Monitor
+    url: http://notifyninja.com
