feat(bot) detect bot: Project Resonance

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2200,6 +2200,11 @@
   category: 'Service Agent'
   url: 'http://capture.heartrails.com'
 
+- regex: 'Project-Resonance'
+  name: 'Project Resonance'
+  category: 'Crawler'
+  url: 'http://project-resonance.com'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
