--- a/regexes/client/feed_readers.yml
+++ b/regexes/client/feed_readers.yml
@@ -50,7 +50,7 @@
 - regex: 'QuiteRSS(?:[/ ](\d+[\.\d]+))?'
   name: 'QuiteRSS'
   version: '$1'
-  url: https://quiterss.org
+  url: 'https://quiterss.org'
   type: 'Feed Reader App'
 
 - regex: 'gPodder/([\d\.]+)'
