--- a/Tests/Parser/Client/fixtures/library.yml
+++ b/Tests/Parser/Client/fixtures/library.yml
@@ -203,3 +203,9 @@
     type: library
     name: Postman Desktop
     version: "7.9.1"
+-
+  user_agent: Jakarta Commons-HttpClient/3.1
+  client:
+    type: library
+    name: Jakarta Commons HttpClient
+    version: "3.1"
