--- a/regexes/client/libraries.yml
+++ b/regexes/client/libraries.yml
@@ -104,15 +104,20 @@
 
 - regex: 'node-fetch/(\d+[\.\d]+)'
   name: 'Node Fetch'
-  version: $1
+  version: '$1'
   url: 'https://github.com/node-fetch/node-fetch'
 
 - regex: 'ReactorNetty/(\d+[\.\d]+)'
   name: 'ReactorNetty'
-  version: $1
+  version: '$1'
   url: 'https://github.com/reactor/reactor-netty'
 
 - regex: 'PostmanRuntime(?:/(\d+[\.\d]+))?'
   name: 'Postman Desktop'
-  version: $1
+  version: '$1'
   url: 'https://github.com/postmanlabs/postman-runtime'
+
+- regex: 'Jakarta Commons-HttpClient/(\d+[\.\d]+)'
+  name: 'Jakarta Commons HttpClient'
+  version: '$1'
+  url: 'https://hc.apache.org/httpclient-3.x'
