--- a/Tests/Parser/Client/fixtures/library.yml
+++ b/Tests/Parser/Client/fixtures/library.yml
@@ -209,3 +209,9 @@
     type: library
     name: Jakarta Commons HttpClient
     version: "3.1"
+-
+  user_agent: Mozilla/4.0 (compatible; Win32; WinHttp.WinHttpRequest.5)
+  client:
+    type: library
+    name: WinHttp WinHttpRequest
+    version: "5"
