--- a/regexes/client/libraries.yml
+++ b/regexes/client/libraries.yml
@@ -117,7 +117,11 @@
   version: '$1'
   url: 'https://github.com/postmanlabs/postman-runtime'
 
-- regex: 'Jakarta Commons-HttpClient/(\d+[\.\d]+)'
+- regex: 'Jakarta Commons-HttpClient/([\.\d]+)'
   name: 'Jakarta Commons HttpClient'
   version: '$1'
   url: 'https://hc.apache.org/httpclient-3.x'
+
+- regex: 'WinHttp.WinHttpRequest.+([\.\d]+)'
+  name: 'WinHttp WinHttpRequest'
+  version: '$1'
