fix: EkiohFlow get correct browser version

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -6,7 +6,12 @@
 ###############
 
 # Flow (https://www.ekioh.com/)
-- regex: 'Ekioh(?:Flow)?/(?:(\d+[\.\d]+))'
+- regex: 'Flow/(?:(\d+[\.\d]+))'
+  name: 'Flow'
+  version: '$1'
+  engine:
+    default: 'EkiohFlow'
+- regex: 'Ekioh/(?:(\d+[\.\d]+))'
   name: 'Flow'
   version: '$1'
   engine:
