feat(device) detect new brand Colors models: S9, S11, S1, P70, P65, P50 Plus, P45 feat(device) detect brand Avvio model: Colombia (2018) feat(device) detect brand Cloudfone model: Excite Prime 2 Pro feat(device) detect brand AVH model: Excer 8

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2336,14 +2336,18 @@ AVH:
       model: 'Excer G5'
     - regex: 'Excer[ _]10[ _]PRO'
       model: 'Excer 10 Pro'
+    - regex: 'Excer[ _]8'
+      model: 'Excer 8'
 
 # Avvio
 Avvio:
-  regex: 'Avvio[ _]?([a-z0-9\-]+)|CHIVAS_55(?:[);/ ]|$)'
+  regex: 'Avvio[ _]?([a-z0-9\-]+)|(?:CHIVAS_55|Colombia_2018)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'CHIVAS_55'
       model: 'Chivas 55'
+    - regex: 'Colombia_2018'
+      model: 'Colombia (2018)'
     - regex: 'Avvio[ _]PAD'
       model: 'PAD'
       device: 'tablet'
@@ -18392,7 +18396,7 @@ Cloudpad:
 
 # Cloudfone
 Cloudfone:
-  regex: 'Thrill (?:Boost[ ]?(2|3)?|Snap|Access)(?:[);/ ]|$)'
+  regex: '(?:Thrill (?:Boost[ ]?(2|3)?|Snap|Access)|Excite Prime 2 Pro)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Thrill Boost (2|3)(?:[);/ ]|$)'
@@ -18403,6 +18407,8 @@ Cloudfone:
       model: 'Thrill Snap'
     - regex: 'Thrill Access(?:[);/ ]|$)'
       model: 'Thrill Access'
+    - regex: 'Excite Prime 2 Pro(?:[);/ ]|$)'
+      model: 'Excite Prime 2 Pro'
 
 # Vsmart
 Vsmart:
@@ -19362,6 +19368,12 @@ FarEasTone:
 Smailo:
   regex: 'Smailo_(2GO)(?:[);/ ]|$)'
   device: 'tablet'
+  model: '$1'
+
+# Colors Mobile
+Colors:
+  regex: 'Colors[ _](S(?:[19]|11)|P70|P[46]5|P50 Plus)(?:[);/ ]|$)'
+  device: 'smartphone'
   model: '$1'
 
 # Leff
