feat(device) detect new brand CG Mobile models: Omega 8, Omega 3 feat(device) detect new brand OKWU model: Sigma feat(device) detect new brand ZH&K models: Odyssey O2, Odyssey Range feat(device) detect brand Hotwav models: Magic Q8, Magic 5 Plus, Magic 13, Magic 11, Magic 9, Magic 8 feat(device) detect brand Oukitel model: OK6000 Plus feat(device) detect brand Cherry Mobile models: Omega Icon 2 feat(device) detect brand VGO TEL models: Ocean 9, Ocean 8, Ocean 9L, Ocean 6 feat(device) detect brand NUU Mobile model: M2 feat(device) detect brand Mito models: A19 2GB, A19 1GB, A21, A17, T8 feat(device) detect brand Avvio model: Mint M353

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2341,11 +2341,13 @@ AVH:
 
 # Avvio
 Avvio:
-  regex: 'Avvio[ _]?([a-z0-9\-]+)|(?:CHIVAS_55|Colombia_2018)(?:[);/ ]|$)'
+  regex: 'Avvio[ _]?([a-z0-9\-]+)|(?:CHIVAS_55|Colombia_2018|Mint_M353)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'CHIVAS_55'
       model: 'Chivas 55'
+    - regex: 'Mint_M353'
+      model: 'Mint M353'
     - regex: 'Colombia_2018'
       model: 'Colombia (2018)'
     - regex: 'Avvio[ _]PAD'
@@ -2651,13 +2653,15 @@ Brondi:
       model: 'SURFING TAB $1'
       device: 'tablet'
 
-# VGO TEL
+# VGO TEL (vgotel.com)
 VGO TEL:
-  regex: 'Venture V(?:[278]|12)(?:[);/ ]|$)'
+  regex: '(?:Venture V(?:[278]|12)|Ocean[_ ][689]|Ocean9L)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Venture V([278]|12)(?:[);/ ]|$)'
       model: 'Venture V$1'
+    - regex: 'Ocean[_ ]?([689]|9L)(?:[);/ ]|$)'
+      model: 'Ocean $1'
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
@@ -3511,7 +3515,7 @@ Changhong:
 
 # Cherry Mobile
 'Cherry Mobile':
-  regex: 'Cherry|Superion S1 DTV|Flare([ _])?(2X|4|A[123]|J[123568]|P[13]|S[4-8]|X2|Y[367]|S Play|HD|LITE|XL|X_V2|Y3s|Tab)(?:[ _](?:Pro|Plus|Max|LTE))?|Fusion Bolt|OMEGA HD 4|Spin Max 2'
+  regex: 'Cherry|Superion S1 DTV|Flare([ _])?(2X|4|A[123]|J[123568]|P[13]|S[4-8]|X2|Y[367]|S Play|HD|LITE|XL|X_V2|Y3s|Tab)(?:[ _](?:Pro|Plus|Max|LTE))?|Fusion Bolt|OMEGA HD 4|Spin Max 2|Omega Icon 2'
   device: 'smartphone'
   models:
     - regex: '(Flare2X)'
@@ -3558,6 +3562,8 @@ Changhong:
       model: 'Flare $1'
     - regex: 'OMEGA HD 4'
       model: 'Omega HD 4'
+    - regex: 'Omega Icon 2'
+      model: 'Omega Icon 2'
     - regex: 'Spin Max 2'
       model: 'Spin Max 2'
     - regex: '(Fusion Bolt|Flare Tab Pro|Flare Tab|Superion S1 DTV)'
@@ -10441,8 +10447,8 @@ NUU Mobile:
   models:
     - regex: 'NUU_A([13])'
       model: 'A$1'
-    - regex: 'NUU_M3(?:[);/ ]|$)'
-      model: 'M3'
+    - regex: 'NUU_M([32])(?:[);/ ]|$)'
+      model: 'M$1'
     - regex: 'NUU_X5(?:[);/ ]|$)'
       model: 'X5'
     - regex: 'S6001L'
@@ -11170,7 +11176,7 @@ Orange:
 
 # Oukitel
 Oukitel:
-  regex: 'OUKITEL|(?:(?:C15|C16|K10000|K[46]000)(?:[ _]Pro)|K4000Pro|U16 Max|U7 Max|U7 Plus|U11[_ ]Plus|U20_Plus|WP5000|WP[58] Pro|K[46]000[ _](?:Plus|Lite)|Y4800|K10000|K[4567]000| WP[5-7])(?:[);/ ]|$)'
+  regex: 'OUKITEL|(?:(?:C15|C16|K10000|K[46]000)(?:[ _]Pro)|K4000Pro|U16 Max|U7 Max|U7 Plus|U11[_ ]Plus|U20_Plus|OK6000 Plus|WP5000|WP[58] Pro|K[46]000[ _](?:Plus|Lite)|Y4800|K10000|K[4567]000| WP[5-7])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(C15|C16|K10000|K[46]000|WP[258]|U15)[ _]?Pro(?:[);/ ]|$)'
@@ -11179,7 +11185,7 @@ Oukitel:
       model: 'K$1'
     - regex: '(K10000|U16|U7)[ _]Max(?:[);/ ]|$)'
       model: '$1 Max'
-    - regex: '(U20|K[46]000|U7|U11)[_ ]?Plus(?:[);/ ]|$)'
+    - regex: '(U20|K[46]000|U7|U11|OK6000)[_ ]?Plus(?:[);/ ]|$)'
       model: '$1 Plus'
     - regex: '(K4000)[_ ]Lite(?:[);/ ]|$)'
       model: '$1 Lite'
@@ -11187,6 +11193,12 @@ Oukitel:
       model: '$1'
     - regex: ' (WP[5-7])(?:[);/ ]|$)'
       model: '$1'
+
+# OKWU
+OKWU:
+  regex: 'OKWU SIGMA(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: 'Sigma'
 
 # Ouki
 Ouki:
@@ -17756,14 +17768,14 @@ VKworld:
 
 # Mito
 Mito:
-  regex: 'MITO[- _](A(?:1[068]|39|55|180|2[36]0|313|322|33|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950)|T(?:10|35|3[03]0|510|888)|311)(?:[);/ ]|$)'
+  regex: 'MITO[- _](A(?:1[0678]|19_[12]GB|21|39|55|180|2[36]0|313|322|33|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950)|T(?:8|10|35|3[03]0|510|888)|311)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'MITO[ _](A(?:1[068]|39|55|180|2[36]0|33|322|313|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950))(?:[);/ ]|$)'
+    - regex: 'MITO[ _](A(?:1[0678]|19_[12]GB|21|39|55|180|2[36]0|33|322|313|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950))(?:[);/ ]|$)'
       model: '$1'
     - regex: 'MITO-(311)(?:[);/ ]|$)'
       model: '$1'
-    - regex: 'MITO[ _](T(?:10|35|3[03]0|510|888))(?:[);/ ]|$)'
+    - regex: 'MITO[ _](T(?:8|10|35|3[03]0|510|888))(?:[);/ ]|$)'
       device: 'tablet'
       model: '$1'
 
@@ -18583,7 +18595,7 @@ Sunstech:
 
 # Hotwav
 Hotwav:
-  regex: '(Venus[_ ]X1[024569]|Pearl K2)(?:[);/ ]|$)'
+  regex: '(Venus[_ ]X1[024569]|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13]))(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
@@ -19265,7 +19277,7 @@ Artizlee:
       device: 'smartphone'
       model: 'S9'
 
-# Mintt
+# Mintt (www.mintt.co)
 Mintt:
   regex: '(?:Coolmintt(?:A3|M2)?|Ultramintt(?:S2)?|FRESHMINTT(?:A7|A10)?)(?:[);/ ]|$)'
   device: 'smartphone'
@@ -19466,6 +19478,22 @@ Pluzz:
   regex: '(Powerful_K55i)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# CG Mobile
+'CG Mobile':
+  regex: 'Omega ([38])(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: 'Omega $1'
+
+# (zhnkmobile.com)
+'ZH&K':
+  regex: '(?:ODYSSEY O2|ODYSSEY RANGE)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'ODYSSEY O2'
+      model: 'Odyssey O2'
+    - regex: 'ODYSSEY RANGE'
+      model: 'Odyssey Range'
 
 # Leff
 Leff:
