feat(device) detect new brand IUNI models: U3, i1 feat(device) detect brand Explay model: Lagoon feat(device) detect brand Lark model: Ultimate 7i feat(device) detect brand LAIQ model: Dubai feat(device) detect brand NEC model: LAVIE Tab E TE510 (PC-TE510S1) feat(device) detect brand Lanix model: Ilium L900 feat(device) detect brand JVC feat(device) detect brand Logicom model: L-ement 550, L-ement 501, L-ement 451,  L-ement 401, L-ement 350, L-ement 500, L-ement 500L, L-ixir Tab 701 3G,  L-ixir Tab 840, L-ement Tab 1040 BT, L-ement Tab 1040, L-ement Tab 740, L-ite 400M  L-ite 452, L-ite 504 HD, L-ite 506 HD, L-ite 506R HD, L-ite 552 HD, L-Egant One

--- a/Tests/fixtures/tablet-2.yml
+++ b/Tests/fixtures/tablet-2.yml
@@ -8589,9 +8589,9 @@
     engine: Blink
     engine_version: ""
   device:
-    type: tablet
+    type: smartphone
     brand: Logicom
-    model: L-ite Tab 504 HD
+    model: L-ite 504 HD
   os_family: Android
   browser_family: Chrome
 - 
@@ -8627,7 +8627,7 @@
   device:
     type: tablet
     brand: Logicom
-    model: L-ixir Tab 701
+    model: L-ixir Tab 701 3G
   os_family: Android
   browser_family: Chrome
 - 
